# TestPytorch

./: CMakeLists.txt  README.md
TestPytorch/: CMakeLists.txt
TestPytorch/include/: TestPytorch.h  detector.h
TestPytorch/src/: FaceDetector.cpp  Figure.cpp  TestPytorch.cpp
